// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B1 when asked to render  renders 1`] = `
<p
  className="text-xl "
>
  Hello world!
</p>
`;

exports[`B1 when asked to render with additional class  renders with additional class 1`] = `
<p
  className="text-xl  some-class"
>
  Hello world!
</p>
`;
